--- a/project.json
+++ b/project.json
@@ -4,9 +4,11 @@
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.6.4-beta.517923]",
+    "UiPath.JiraSoftware.Activities": "[1.0.0.17480]",
     "UiPath.Mail.Activities": "[1.6.1-beta.517925]",
     "UiPath.System.Activities": "[19.9.0-beta.518098]",
-    "UiPath.UIAutomation.Activities": "[19.9.0-beta.523159]"
+    "UiPath.UIAutomation.Activities": "[19.9.0-beta.523159]",
+    "UiPath.WebAPI.Activities": "[1.4.3]"
   },
   "webServices": [],
   "schemaVersion": "4.0",
@@ -29,7 +31,8 @@
     "libraryOptions": {
       "includeOriginalXaml": false,
       "privateWorkflows": []
-    }
+    },
+    "fileInfos": []
   },
   "expressionLanguage": "VisualBasic"
 }
